--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,35 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+<ion-header>
+
+      <img src="../../assets/logoionic.png" alt="">
+
+    
+        <ion-button color="#e2f1ff;"  id="boton">Acceder</ion-button>
+        
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+
+
+<!--
+<ion-menu contentId="main-content">
+
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title>Menu Content</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <ion-button color="secondary">Acceder</ion-button>
-  </div>
-</ion-content>
+  <ion-content class="ion-padding">
+    <ion-menu-button>Materias</ion-menu-button>
+  </ion-content>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding"> Tap the button in the toolbar to open the menu. </ion-content>
+</div>
+-->
